--- a/_config.yml
+++ b/_config.yml
@@ -19,19 +19,18 @@
 # in the templates via {{ site.myvariable }}.
 
 name: EO Toolbox
-markdown: redcarpet
+markdown: kramdown
 pygments: true
 baseurl: /eo-toolbox
 
-title: Your awesome title
-email: your-email@example.com
+title: EO - Toolbox
+email: nicolas.deffense@uclouvain.be
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  nicolasdeffense
 
 # Build settings
 theme: minima
